@@ -16,6 +16,7 @@ Bugs fixed
 * #1771: automated .mo building doesn't work properly.
 * #1783: Autodoc: Python2 Allow unicode string in __all__.
   Thanks to Jens Hedegaard Nielsen.
+* #1781: Setting `html_domain_indices` to a list raises a type check warnings.
 
 Release 1.3 (released Mar 10, 2015)
 ===================================
